--- a/src/landing.css
+++ b/src/landing.css
@@ -57,6 +57,10 @@ ul {
   width: 100%;
 }
 
+.Container--small {
+  max-width: 556px;
+}
+
 .Landing {
   display: flex;
   flex-direction: column;
@@ -68,8 +72,9 @@ ul {
 .Policy-hero {
   background-image: url('./images/BluePolicy.png');
   background-size: 100%;
-  display: flex;
+  width: 100%;
   mix-blend-mode: normal;
+  background-blend-mode: multiply;
   opacity: 0.78;
 }
 
@@ -110,7 +115,9 @@ ul {
   justify-content: center;
   flex-direction: column;
   display: flex;
-  flex: 1 1 auto;
+  margin-left: 10px;
+  box-sizing: border-box;
+  border-radius: 5px;
 }
 
 input[type='text'] {
@@ -121,12 +128,11 @@ input[type='text'] {
   margin: 8px 0;
   border-radius: 4px;
   border: 1px solid #dadfe9;
-  box-sizing: border-box;
 }
 
 .Contact-form-submit {
-  justify-content: center;
-  width: 75%;
+  align-items: center;
+  display: flex;
   background: #ff7043;
   color: white;
   padding: 14px 20px;
