--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -90,18 +90,26 @@ ul {
 /*Policy Hero */
 
 .Policy-hero {
-  background-image: url('./images/BluePolicy.png');
+  background-image: url('../images/BluePolicy.png');
   background-size: 100%;
+  height: 100%;
   width: 100%;
+  position: relative;
   mix-blend-mode: normal;
   background-blend-mode: multiply;
-  opacity: 0.78;
+}
+
+.Policy-hero-wrapper {
+  margin: 0 auto;
+  max-width: 960px;
+  width: 100%;
 }
 
 /* Contact Hero */
 .Contact-hero {
-  background-image: url('./images/SignUpImage.png');
+  background-image: url('../images/SignUpImage.png');
   background-size: 100%;
+  position: relative;
   width: 100%;
   mix-blend-mode: normal;
   background-blend-mode: multiply;
@@ -111,7 +119,6 @@ ul {
 .Contact-hero-wrapper {
   margin: 0 auto;
   max-width: 960px;
-  padding: 0 10px;
   width: 100%;
 }
 
