--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -35,7 +35,7 @@ h5,
 h6 {
   color: rgba(1, 108, 183, 1);
   font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 img {
@@ -70,10 +70,6 @@ nav {
 nav ul {
   display: flex;
   list-style-type: none;
-  /* flex-direction: row; */
-  /* align-items: center;
-  justify-content: flex-start;
-  flex: 1 1 auto; */
 }
 
 nav li {
@@ -85,28 +81,133 @@ nav li {
 
 .Top-blue-hero {
   background-image: url('../images/BlueBG.png');
-  /* background-size: cover; */
   background-position: top;
   height: 100%;
+  width: auto;
   height: 1400px;
-  /* width: 100%; */
   background-repeat: no-repeat;
+  vertical-align: center;
 }
+
+.Computer-Image {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+
+/* Get Started */
+
+.Get-started {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.Get-started h1 {
+  font-weight: 200;
+  font-style: normal;
+  font-size: 50px;
+  text-align: center;
+  letter-spacing: 1px;
+  color: white;
+}
+
+.Get-started h2 {
+  flex-direction: column;
+  line-height: 34px;
+  font-size: 24px;
+  width: 60%;
+  letter-spacing: 1px;
+  color: #ffffff;
+}
+
+.Get-started button {
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: #ff7043;
+  border-radius: 5px;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  cursor: pointer;
+}
+
+/*Partners*/
+.Partners {
+  background: #f6f9fc;
+  border: 1px solid #f2f4f7;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.Partners img {
+  height: 100%;
+}
+
+/* Solution */
+.Solution {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+  vertical-align: center;
+}
+
+.Solution-header {
+  padding-top: 30px;
+  padding-left: 20%;
+  font-weight: 300;
+  width: 50%;
+  font-size: 20px;
+}
+
+.Solutions {
+  display: flex;
+  flex-direction: column;
+  padding-top: 3%;
+}
+
+.Solutions aside {
+  padding-left: 30%;
+  width: 70%;
+}
+
+.Solutions img {
+  width: 5%;
+}
+
 /*Policy Hero */
 
 .Policy-hero {
   background-image: url('../images/BluePolicy.png');
-  background-position: top;
+  background-position: bottom;
   height: 100%;
-  height: 1000px;
-  /* width: 100%; */
+  height: 1200px;
   background-repeat: no-repeat;
+  display: flex;
 }
 
 .Policy-hero-wrapper {
   margin: 0 auto;
-  max-width: 960px;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.Policy-hero h1 {
+  padding: 15%;
+  justify-content: center;
+  align-content: center;
+  color: #ffffff;
+  width: 85%;
 }
 
 /* Contact Hero */
@@ -124,9 +225,6 @@ nav li {
   margin: 0 auto;
   max-width: 960px;
   width: 100%;
-  /* background-color: red; */
-  /* display: flex; */
-  /* justify-content: center; */
 }
 
 .Contact-hero-form {
@@ -154,7 +252,6 @@ nav li {
   box-sizing: border-box;
   border-radius: 5px;
   width: 500px;
-  /* background-color: blue; */
 }
 
 .Contact-hero-wrapper form {
