--- a/src/components/HackerNews/hackernews.css
+++ b/src/components/HackerNews/hackernews.css
@@ -87,6 +87,7 @@ ul {
   width: 100%;
   grid-template-columns: 2fr 1fr;
   grid-column-gap: 50px;
+  padding-left: 50px;
 }
 
 .Hacker-news h1 {
@@ -100,9 +101,12 @@ ul {
   grid-template-rows: repeat(4, 100px);
   grid-gap: 2rem;
   padding: 20px;
-  padding-left: 50px;
   text-align: center;
   justify-self: center;
+  border-radius: 6px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.08), 0 5px 5px 0 rgba(0, 0, 0, 0.04);
+  background-color: rgba(255, 255, 255, 0.7);
+  height: 100%;
 }
 
 .news-panel ul li {
