--- a/src/components/HackerNews/hackernews.css
+++ b/src/components/HackerNews/hackernews.css
@@ -62,11 +62,14 @@ ul {
 .Hacker-news-nav {
   display: flex;
   justify-content: space-between;
+  background-color: rgba(1, 108, 183, 1);
 }
 
 .Hacker-news-nav ul {
   display: flex;
   list-style-type: none;
+  align-content: space-around;
+  display: inline-block;
 }
 
 .Hacker-news-nav li {
@@ -74,6 +77,13 @@ ul {
   padding-bottom: 0;
   padding-top: 0;
   margin-left: 20px;
+  display: inline-block;
+}
+
+.Hacker-news h1 {
+  text-align: center;
+  color: #ffffff;
+  display: inline-block;
 }
 
 /* Hacker News */
@@ -88,14 +98,10 @@ ul {
   grid-template-columns: 2fr 1fr;
   grid-column-gap: 50px;
   padding-left: 50px;
-}
-
-.Hacker-news h1 {
-  text-align: center;
+  padding-top: 30px;
 }
 
 .news-panel {
-  /* background-color: #ffffff; */
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(4, 100px);
@@ -114,7 +120,6 @@ ul {
 }
 
 .bookmarks-panel {
-  /* background-color: #ffffff; */
   display: flex;
   justify-items: center;
   flex-direction: column;
