--- a/src/components/HackerNews/hackernews.css
+++ b/src/components/HackerNews/hackernews.css
@@ -107,7 +107,7 @@ ul {
 
 .news-panel {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, minmax(250px, 1fr));
   grid-template-rows: repeat(4, 100px);
   grid-gap: 2rem;
   padding: 20px;
